Spring Boot Web first commint
- Make connection to database
- Add cars to database